<resources>
    <string name="app_name">CryptoChat</string>
    <string name="theme_mode">THEME_MODE_IS_LIGHT</string>

    <!-- Login Screen -->
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register Here</string>
    <string name="login_state_key">LOGIN</string>

    <!-- Home Screen -->
    <string name="chat_user_profile_photo">chat user profile photo</string>
    <string name="light_and_dark_mode">light and dark mode</string>
    <string name="your_profile">your profile</string>
    <string name="make_video_call">make video call</string>
    <string name="make_phone_call">make phone call</string>
    <string name="new_message">New message</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>

    <!-- Chat Screen -->
    <string name="type_something">Type something…</string>
    <string name="send_message">send message</string>
    <string name="camera">camera</string>
    <string name="back">back</string>
</resources>