<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userImageUrl"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/home_top_bar_theme_mode_imageButton"
            android:layout_width="@dimen/top_bar_view_size"
            android:layout_height="@dimen/top_bar_view_size"
            android:background="@drawable/back_button_background"
            android:contentDescription="@string/light_and_dark_mode"
            android:src="@drawable/ic_light_mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimaryVariant" />

        <TextView
            android:id="@+id/home_top_bar_head_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/messages"
            android:textSize="@dimen/home_top_bar_head_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/home_top_bar_user_imageView"
            android:layout_width="@dimen/top_bar_view_size"
            android:layout_height="@dimen/top_bar_view_size"
            LoadCircleImage="@{userImageUrl}"
            android:contentDescription="@string/your_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>